--- a/src/star-rating.css
+++ b/src/star-rating.css
@@ -3,6 +3,15 @@
 .star-rating-container
 {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.box
+{
+    display: flex;
+    gap: 10px;
 }
 
 .star
@@ -12,5 +21,5 @@
 
 .star.active
 {
-    color: red;
+    color: yellow;
 }
